--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
         </nav>
         <a href="#"><button>Sing Up</button></a>
     </header>
+
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt esse expedita, itaque numquam inventore vitae perspiciatis quis dolore minus impedit deleniti culpa voluptas aliquid nulla perferendis tenetur corrupti, recusandae rerum voluptatibus fuga maxime delectus! Quidem aliquam magnam vel quis tempora expedita ut facere ad facilis in. Sapiente, cupiditate! Maxime sint mollitia doloremque odit alias eius reiciendis, blanditiis soluta! Vero minima sequi praesentium enim eum aspernatur nostrum repudiandae hic nisi. Eaque reprehenderit autem soluta corrupti nam. Ipsa itaque, in est obcaecati fugiat sapiente quos enim iure magni assumenda ratione voluptatum. Necessitatibus at earum laboriosam, maiores inventore officia qui molestias in illo?</p>
+    </section>
+    <section>
+        <figure>
+            <img src="./img/101009707-diseño-de-icono-de-logotipo-de-la-nube.webp" alt="">
+        </figure>
+    </section>
 </body>
 </html>
